syntax = "proto3";
option go_package = "pb/discord_logs";
package discord_logs;
import "google/api/annotations.proto";
import "google/protobuf/struct.proto";

service DiscordLogsService {
  rpc SendLogsMessage (SendLogsMessageRequest) returns (SendLogsMessageResponse) {
    option (google.api.http) = {
      post: "/discord-logs-bot"
      body: "*"
    };
  }
  rpc SendLogsTracking (SendLogsTrackingRequest) returns (SendLogsTrackingResponse) {
    option (google.api.http) = {
      post: "/discord-logs-bot",
      body: "*"
    };
  }
}

message BaseResponse {
  string message = 1;
  int32 code = 2;
}
message SendLogsTrackingRequest {
  string path = 1;
  int32 code = 2;
  string method = 3;
  string service = 4;
  google.protobuf.Struct message = 5;
}


message SendLogsTrackingResponse {
  string message = 1;
  int32 code = 2;
}

message SendLogsMessageRequest {
  string message = 1;
  string service = 2;
}

message SendLogsMessageResponse {
  BaseResponse baseResponse = 1;
}